Open all links in new tab.

--- a/home.html
+++ b/home.html
@@ -439,16 +439,16 @@
             </div>
           </div>
           <div class="alert-success"><strong>Email sent!</strong> Thank you for contacting me.</div>
-          <div class="alert-error"><strong>Email not sent!</strong> It appears that the mailing server is down. Please try again later or email me directly at: <a target="_blank" href="mailto:bhamodi@uwaterloo.ca">bhamodi@uwaterloo.ca</a></div>
+          <div class="alert-error"><strong>Email not sent!</strong> It appears that the mailing server is down. Please try again later or email me directly at: <a href="mailto:bhamodi@uwaterloo.ca" target="_blank">bhamodi@uwaterloo.ca</a></div>
         </form>
       </div>
       <div class="contact">
         <ul class="icons">
-          <li><a class="github" target="_blank" href="https://github.com/bhamodi"></a></li>
-          <li><a class="stackoverflow" target="_blank" href="http://stackoverflow.com/users/3474514/baraa-h"></a></li>
-          <li><a class="hackerrank" target="_blank" href="https://www.hackerrank.com/bhamodi"></a></li>
-          <li><a class="codecademy" target="_blank" href="http://www.codecademy.com/bhamodi"></a></li>
-          <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/baraahamodi"></a></li>
+          <li><a class="github" href="https://github.com/bhamodi" target="_blank"></a></li>
+          <li><a class="stackoverflow" href="http://stackoverflow.com/users/3474514/baraa-h" target="_blank"></a></li>
+          <li><a class="hackerrank" href="https://www.hackerrank.com/bhamodi" target="_blank"></a></li>
+          <li><a class="codecademy" href="http://www.codecademy.com/bhamodi" target="_blank"></a></li>
+          <li><a class="linkedin" href="https://www.linkedin.com/in/baraahamodi" target="_blank"></a></li>
         </ul>
         <div class="copy-right">2015 © Baraa Hamodi. All rights reserved.</div>
       </div>
