--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57-precomposed.png">
 
   <!-- Fonts -->
-  <link href="http://fonts.googleapis.com/css?family=Montserrat:700|Cardo" rel="stylesheet">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:700|Cardo">
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/loader.css"/>
@@ -91,13 +91,13 @@
         <a href="home" class="button">CLICK TO ENTER</a>
         <div class="contact">
           <ul class="icons">
-            <li><a class="github" target="_blank" href="https://github.com/bhamodi"></a></li>
-            <li><a class="stackoverflow" target="_blank" href="http://stackoverflow.com/users/3474514/baraa-h"></a></li>
-            <li><a class="hackerrank" target="_blank" href="https://www.hackerrank.com/bhamodi"></a></li>
-            <li><a class="codecademy" target="_blank" href="http://www.codecademy.com/bhamodi"></a></li>
-            <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/baraahamodi"></a></li>
+            <li><a class="github" href="https://github.com/bhamodi" target="_blank"></a></li>
+            <li><a class="stackoverflow" href="http://stackoverflow.com/users/3474514/baraa-h" target="_blank"></a></li>
+            <li><a class="hackerrank" href="https://www.hackerrank.com/bhamodi" target="_blank"></a></li>
+            <li><a class="codecademy" href="http://www.codecademy.com/bhamodi" target="_blank"></a></li>
+            <li><a class="linkedin" href="https://www.linkedin.com/in/baraahamodi" target="_blank"></a></li>
           </ul>
-          <a class="mail" target="_blank" href="mailto:bhamodi@uwaterloo.ca">bhamodi@uwaterloo.ca</a>
+          <a class="mail" href="mailto:bhamodi@uwaterloo.ca" target="_blank">bhamodi@uwaterloo.ca</a>
         </div>
       </li>
     </ul>
