Update StackOverfloc links.

--- a/home.html
+++ b/home.html
@@ -445,7 +445,7 @@
       <div class="contact">
         <ul class="icons">
           <li><a class="github" href="https://github.com/bhamodi" target="_blank"></a></li>
-          <li><a class="stackoverflow" href="http://stackoverflow.com/users/3474514/baraa-h" target="_blank"></a></li>
+          <li><a class="stackoverflow" href="http://stackoverflow.com/users/3474514/baraa" target="_blank"></a></li>
           <li><a class="hackerrank" href="https://www.hackerrank.com/bhamodi" target="_blank"></a></li>
           <li><a class="codecademy" href="http://www.codecademy.com/bhamodi" target="_blank"></a></li>
           <li><a class="linkedin" href="https://www.linkedin.com/in/baraahamodi" target="_blank"></a></li>
