Consolidated loader and normalize CSS into shared.css

--- a/home.html
+++ b/home.html
@@ -29,8 +29,7 @@
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57-precomposed.png">
 
-  <link rel="stylesheet" href="css/loader.css"/>
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/shared.css">
   <link rel="stylesheet" href="css/home.css">
 </head>
 
