--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:700|Cardo">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="css/loader.css"/>
-  <link rel="stylesheet" href="css/normalize.css"/>
+  <link rel="stylesheet" href="css/shared.css"/>
   <link rel="stylesheet" href="css/index.css"/>
 
   <!--[if lt IE 9]>
