Added text-outline to white text.

--- a/home.html
+++ b/home.html
@@ -51,12 +51,12 @@
   <section id="mobile-background" class="clear"></section>
   <div class="main-title">
     <div class="title-container">
-      <div class="welcome">A young man with big dreams.</div>
+      <div class="welcome text-outline">A young man with big dreams.</div>
       <ul>
-        <li class="current-title">Baraa Hamodi</li>
+        <li class="current-title text-outline">Baraa Hamodi</li>
       </ul>
       <div class="spacer"></div>
-      <div class="second-title">Creativity starts with viewing the world differently. Take action & keep it simple.</div>
+      <div class="second-title text-outline">Creativity starts with viewing the world differently. Take action & keep it simple.</div>
       <a href="#skills"><div class="continue-button">FIND OUT MORE<span></span></div></a>
     </div>
   </div>
