--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <!-- Main header -->
       <li class="layer" data-depth="0.20"><div class="title"><h2>MECHATRONICS ENGINEER</h2><span class="line"></span></div></li>
-      <li class="layer" data-depth="0.30"><div class="main-title"><h1>Baraa Hamodi</h1><p class="sub-title">A young man with big dreams.</p></div></li>
+      <li class="layer" data-depth="0.30"><div class="main-title"><h1>Baraa Hamodi</h1><p class="sub-title text-outline">A young man with big dreams.</p></div></li>
 
       <!-- Flakes -->
       <li class="layer" data-depth="0.40">
