Text and keyword update.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Core Meta Data -->
   <meta name="author" content="Baraa Hamodi">
   <meta name="description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences and projects here!">
-  <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,jquery,python,design,java,c++,robotics">
+  <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,javascript,python,design,java,c++,robotics">
 
   <!-- Open Graph Meta Data -->
   <meta property="og:title" content="Baraa Hamodi - Mechatronics Engineer">
@@ -63,7 +63,7 @@
 
       <!-- Main header -->
       <li class="layer" data-depth="0.20"><div class="title"><h2>MECHATRONICS ENGINEER</h2><span class="line"></span></div></li>
-      <li class="layer" data-depth="0.30"><div class="main-title"><h1>Baraa Hamodi</h1><p class="sub-title text-outline">A young man with big dreams.</p></div></li>
+      <li class="layer" data-depth="0.30"><div class="main-title"><h1>Baraa Hamodi</h1><p class="sub-title text-outline">A young man with big dreams</p></div></li>
 
       <!-- Flakes -->
       <li class="layer" data-depth="0.40">
