--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
   <!-- Core Meta Data -->
   <meta name="author" content="Baraa Hamodi">
   <meta name="description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences and projects here!">
-  <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,jquery,python,design,java,c++,robotics">
+  <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,javascript,python,design,java,c++,robotics">
 
   <!-- Open Graph Meta Data -->
   <meta property="og:title" content="Baraa Hamodi - Mechatronics Engineer">
@@ -51,7 +51,7 @@
   <section id="mobile-background" class="clear"></section>
   <div class="main-title">
     <div class="title-container">
-      <div class="welcome text-outline">A young man with big dreams.</div>
+      <div class="welcome text-outline">A young man with big dreams</div>
       <ul>
         <li class="current-title text-outline">Baraa Hamodi</li>
       </ul>
