--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
   <article id="skills" class="content dark">
     <header class="title one">MY SKILLS</header>
     <div class="spacer"></div>
-    <div class="title two">I take pride in my interdisciplinary approach in crafting beautiful, functional and engaging work that delights and delivers results.</div>
+    <div class="title two">I take pride in my interdisciplinary approach to crafting beautiful, functional and engaging work that delights and delivers results.</div>
     <div class="s-container services-container">
       <section class="services">
         <div class="skill-element hideme dontHide">
