--- a/home.html
+++ b/home.html
@@ -245,7 +245,7 @@
     <div class="p-title-one p-dark">ULTRA RESPONSIVE</div>
     <div class="p-title-two">ON BOTH MOBILE & DESKTOP</div>
     <div class="spacer horizontal-line"></div>
-    <div class="mobile-parallax-image hideme-slide2 dontHide"><img src="img/parallax/mobile-parallax-image.png" alt="img"></div>
+    <div class="mobile-parallax-image hideme-slide2 dontHide"><img src="img/parallax/mobile-parallax-image.png" height="100%" width="100%" alt="img"></div>
   </article>
 
   <article id="experience" class="content light">
@@ -404,7 +404,7 @@
     </div>
     <div class="clear"></div>
     <section class="img-spacer">
-      <div class="img-item hideme dontHide"><img src="img/imac.png" alt="img"></div>
+      <div class="img-item hideme dontHide"><img src="img/imac.png" height="100%" width="100%" alt="img"></div>
     </section>
   </article>
 
