--- a/home.html
+++ b/home.html
@@ -414,7 +414,7 @@
       <div class="spacer"></div>
       <div class="title two">I like to create things with fun, like-minded people.<br>Feel free to say hello!</div>
       <div class="hideme dontHide">
-        <form method="post" id="contact" class="contactForm" action="php/mail.php" enctype="text/plain">
+        <form method="post" id="contact" class="contactForm" action="js/home/main.js" enctype="text/plain">
           <div id="personal" class="bay form-horizontal">
             <div class="control-group">
               <div class="controls">
