Attempt to fix mailing service.

--- a/home.html
+++ b/home.html
@@ -418,22 +418,22 @@
           <div id="personal" class="bay form-horizontal">
             <div class="control-group">
               <div class="controls">
-                <input class="span9" type="text" name="name" placeholder="FULL NAME">
+                <input class="span9" type="text" id="name" placeholder="FULL NAME">
               </div>
             </div>
             <div class="control-group">
               <div class="controls">
-                <input class="span9" type="text" name="email" placeholder="YOUR EMAIL">
+                <input class="span9" type="text" id="email" placeholder="YOUR EMAIL">
               </div>
             </div>
             <div class="control-group">
               <div class="controls">
-                <textarea class="span9" type="text" name="message" rows="12" placeholder="TYPE MESSAGE"></textarea>
+                <textarea class="span9" type="text" id="message" rows="12" placeholder="TYPE MESSAGE"></textarea>
               </div>
             </div>
             <div class="control-group">
               <div class="controls send-btn">
-                <button type="submit" name="submit" class="contour-btn red">SEND MESSAGE</button>
+                <button type="submit" id="submit" class="contour-btn red">SEND MESSAGE</button>
               </div>
             </div>
           </div>
