--- a/home.html
+++ b/home.html
@@ -414,26 +414,26 @@
       <div class="spacer"></div>
       <div class="title two">I like to create things with fun, like-minded people.<br>Feel free to say hello!</div>
       <div class="hideme dontHide">
-        <form method="post" id="contact" class="contactForm" action="js/home/main.js" enctype="text/plain">
+        <form method="get" id="contact" class="contactForm" action="mailto:bhamodi@uwaterloo.ca" enctype="text/plain">
           <div id="personal" class="bay form-horizontal">
             <div class="control-group">
               <div class="controls">
-                <input class="span9" type="text" id="name" placeholder="FULL NAME">
+                <input class="span9" type="text" name="name" placeholder="FULL NAME">
               </div>
             </div>
             <div class="control-group">
               <div class="controls">
-                <input class="span9" type="text" id="email" placeholder="YOUR EMAIL">
+                <input class="span9" type="text" name="email" placeholder="YOUR EMAIL">
               </div>
             </div>
             <div class="control-group">
               <div class="controls">
-                <textarea class="span9" type="text" id="message" rows="12" placeholder="TYPE MESSAGE"></textarea>
+                <textarea class="span9" type="text" name="message" rows="12" placeholder="TYPE MESSAGE"></textarea>
               </div>
             </div>
             <div class="control-group">
               <div class="controls send-btn">
-                <button type="submit" id="submit" class="contour-btn red">SEND MESSAGE</button>
+                <button type="submit" class="contour-btn red">SEND MESSAGE</button>
               </div>
             </div>
           </div>
