Replaced mail form and verification with a simple mail link.

--- a/home.html
+++ b/home.html
@@ -412,34 +412,9 @@
     <div class="footer-container">
       <div id="contact" class="title one">CONTACT</div>
       <div class="spacer"></div>
-      <div class="title two">I like to create things with fun, like-minded people.<br>Feel free to say hello!</div>
+      <div class="title two">I like to create things with fun, like-minded people. Feel free to say hello!</div>
       <div class="hideme dontHide">
-        <form method="get" id="contact" class="contactForm" action="mailto:bhamodi@uwaterloo.ca" enctype="text/plain">
-          <div id="personal" class="bay form-horizontal">
-            <div class="control-group">
-              <div class="controls">
-                <input class="span9" type="text" name="name" placeholder="FULL NAME">
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="controls">
-                <input class="span9" type="text" name="email" placeholder="YOUR EMAIL">
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="controls">
-                <textarea class="span9" type="text" name="message" rows="12" placeholder="TYPE MESSAGE"></textarea>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="controls send-btn">
-                <button type="submit" class="contour-btn red">SEND MESSAGE</button>
-              </div>
-            </div>
-          </div>
-          <div class="alert-success"><strong>Email sent!</strong> Thank you for contacting me.</div>
-          <div class="alert-error"><strong>Email not sent!</strong> It appears that the mailing server is down. Please try again later or email me directly at: <a href="mailto:bhamodi@uwaterloo.ca" target="_blank">bhamodi@uwaterloo.ca</a></div>
-        </form>
+        <div class="email">Contact me at: <a href="mailto:bhamodi@uwaterloo.ca" target="_blank">bhamodi@uwaterloo.ca</a></div>
       </div>
       <div class="contact">
         <ul class="icons">
@@ -465,8 +440,6 @@
   <script src="js/home/jquery.nav.min.js"></script>
   <script src="js/home/jquery.isotope.min.js"></script>
   <script src="js/home/jquery.mb.YTPlayer.min.js"></script>
-  <script src="js/home/jquery.validate.min.js"></script>
-  <script src="js/home/jquery.form.min.js"></script>
 
   <!-- Google Analytics -->
   <script>
