--- a/home.html
+++ b/home.html
@@ -31,6 +31,8 @@
 
   <link rel="stylesheet" href="css/shared.css">
   <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600,700">
 </head>
 
 <body class="green">
