--- a/home.html
+++ b/home.html
@@ -29,10 +29,13 @@
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57-precomposed.png">
 
-  <link rel="stylesheet" href="css/shared.css">
-  <link rel="stylesheet" href="css/home.css">
+  <!-- Fonts -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600,700">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="css/shared.css">
+  <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body class="green">
