Update Optimizely work experience.

--- a/home.html
+++ b/home.html
@@ -265,7 +265,8 @@
         <div class="work-location">San Francisco, California</div>
         <div class="work-description">
           <ul>
-            <li>Working with the mobile team responsible for both the Android and iOS A/B testing platforms.</li>
+            <li>Working with the Mobile team responsible for creating and maintaining both the Android and iOS A/B testing platforms.</li>
+            <li>Also working with the Application Infrastructure team responsible for all things backend and platform related.</li>
           </ul>
         </div>
       </div>
