Minified plugins.js

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <!-- Javascript -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/plugins.js"></script>
+  <script src="js/plugins.min.js"></script>
 
   <!-- Google Analytics -->
   <script>
