Configured grunt and uglifyjs to make production ready compiled and minified js files.

--- a/home.html
+++ b/home.html
@@ -438,14 +438,7 @@
   <a href="#home" class="scrollup">^</a>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="js/home/home.js"></script>
-  <script src="js/home/jquery.inview.min.js"></script>
-  <script src="js/home/jquery.sticky.min.js"></script>
-  <script src="js/home/portfolio.js"></script>
-  <script src="js/home/jquery.hoverdir.min.js"></script>
-  <script src="js/home/jquery.nav.min.js"></script>
-  <script src="js/home/jquery.isotope.min.js"></script>
-  <script src="js/home/jquery.mb.YTPlayer.min.js"></script>
+  <script src="js/dist/home.min.js"></script>
 
   <!-- Google Analytics -->
   <script>
