--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
 
   <!-- Javascript -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/plugins.js"></script>
+  <script src="js/dist/main.min.js"></script>
 
   <!-- Google Analytics -->
   <script>
