Configured cssmin to compile and minify css files to be production ready.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:700|Cardo">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="css/shared.css"/>
-  <link rel="stylesheet" href="css/index.css"/>
+  <link rel="stylesheet" href="css/dist/index.min.css"/>
 
   <!--[if lt IE 9]>
     <link rel="stylesheet" href="css/ie.css" />
