--- a/home.html
+++ b/home.html
@@ -34,8 +34,7 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600,700">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="css/shared.css">
-  <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/dist/home.min.css">
 </head>
 
 <body class="green">
