Updated work descriptions.

--- a/home.html
+++ b/home.html
@@ -264,8 +264,9 @@
         <div class="work-location">San Francisco, California</div>
         <div class="work-description">
           <ul>
-            <li>Working with the Mobile team responsible for creating and maintaining both the Android and iOS A/B testing platforms.</li>
-            <li>Also working with the Application Infrastructure team responsible for all things backend and platform related.</li>
+            <li>Released new product features using the full stack from Python (GAE) to JavaScript (NuclearJS) to CSS (SASS).</li>
+            <li>Implemented logging and alerting for the Fastly CDN and Amazon S3 buckets hosting Optimizely’s website.</li>
+            <li>Maintained Optimizely’s open source project, NuclearJS, which is a frontend JavaScript framework. It is a reactive Flux implementation built with ImmutableJS data structures.</li>
           </ul>
         </div>
       </div>
@@ -276,7 +277,7 @@
         <div class="work-location">San Francisco, California</div>
         <div class="work-description">
           <ul>
-            <li>Shipped production level code to over 2.5 million daily active users.</li>
+            <li>Shipped production level code to over 2.5 million daily active users using PHP, JavaScript, HTML and CSS.</li>
             <li>Implemented a mobile API which helps deliver mobile specific content to users via mobile device detection.</li>
             <li>Increased user engagement by 4% by releasing fully responsive user-facing features and optimizations.</li>
             <li>Worked with team to recreate the messaging backend to use technologies such as Hadoop, Kafka, Avro and XMPP.</li>
@@ -291,10 +292,10 @@
         <div class="work-location">Ottawa, Ontario</div>
         <div class="work-description">
           <ul>
-            <li>Shipped a Java tool that determines more system information than Microsoft’s “sysinfo” command and produces a CSV file of its findings. This tool is being used internally and saves approximately $1,000 annually per employee.</li>
+            <li>Shipped a tool that determines more system information than Window’s `systeminfo` command. This tool updates a central database and is being used internally. It saves approximately $1,000 annually per employee.</li>
             <li>Automated the environment backup/restoration pipeline process using PowerShell and SQL.</li>
-            <li>Developed web automation using Selenium that collects data from web pages for data verification purposes.</li>
-            <li>Updated and maintained various large-scale scripts and automated test cases.</li>
+            <li>Developed web automation that collects data from web pages for data verification purposes using Selenium.</li>
+            <li>Updated and maintained various large-scale scripts and automated test cases using Selenium.</li>
           </ul>
         </div>
       </div>
