Resolved HTML validator errors.

--- a/home.html
+++ b/home.html
@@ -258,7 +258,7 @@
     <div class="title two">Check out where I've worked!</div>
     <div id="work" class="work-container">
       <div class="work-exp-right-0 hideme">
-        <div class="work-logo"><img src="img/work/optimizely.png"></div>
+        <div class="work-logo"><img src="img/work/optimizely.png" alt="img"></div>
         <div class="work-company"><b>OPTIMIZELY INC.</b></div>
         <div class="work-position">Software Engineer</div>
         <div class="work-location">San Francisco, California</div>
@@ -271,7 +271,7 @@
         </div>
       </div>
       <div class="work-exp-left-1 hideme">
-        <div class="work-logo"><img src="img/work/tagged.png"></div>
+        <div class="work-logo"><img src="img/work/tagged.png" alt="img"></div>
         <div class="work-company"><b>TAGGED INC.</b></div>
         <div class="work-position">Software Engineer</div>
         <div class="work-location">San Francisco, California</div>
@@ -286,7 +286,7 @@
         </div>
       </div>
       <div class="work-exp-right-1 hideme">
-        <div class="work-logo"><img src="img/work/ibm.png"></div>
+        <div class="work-logo"><img src="img/work/ibm.png" alt="img"></div>
         <div class="work-company"><b>IBM INC.</b></div>
         <div class="work-position">Software Developer</div>
         <div class="work-location">Ottawa, Ontario</div>
@@ -300,7 +300,7 @@
         </div>
       </div>
       <div class="work-exp-left-2 hideme">
-        <div class="work-logo"><img src="img/work/wire.png"></div>
+        <div class="work-logo"><img src="img/work/wire.png" alt="img"></div>
         <div class="work-company"><b>WIRE INC.</b></div>
         <div class="work-position">Researcher</div>
         <div class="work-location">Waterloo, Ontario</div>
@@ -311,7 +311,7 @@
         </div>
       </div>
       <div class="work-exp-right-2 hideme">
-        <div class="work-logo"><img src="img/work/onprint.png"></div>
+        <div class="work-logo"><img src="img/work/onprint.png" alt="img"></div>
         <div class="work-company"><b>ONPRINT INC.</b></div>
         <div class="work-position">Graphic Designer</div>
         <div class="work-location">Waterloo, Ontario</div>
