--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57-precomposed.png">
 
   <!-- Fonts -->
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:700|Cardo">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:700%7CCardo">
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/dist/index.min.css"/>
