Added more fade animations.

--- a/home.html
+++ b/home.html
@@ -93,9 +93,9 @@
     </nav>
   </header>
   <article id="skills" class="content dark">
-    <header class="title one">MY SKILLS</header>
+    <header class="title one hideme dontHide">MY SKILLS</header>
     <div class="spacer"></div>
-    <div class="title two">I take pride in my interdisciplinary approach to crafting beautiful, functional and engaging work that delights and delivers results.</div>
+    <div class="title two hideme dontHide">I take pride in my interdisciplinary approach to crafting beautiful, functional and engaging work that delights and delivers results.</div>
     <div class="s-container services-container">
       <section class="services">
         <div class="skill-element hideme dontHide">
@@ -207,8 +207,8 @@
 
   <article id="stats" class="content light">
     <section class="full">
-      <div class="title-full-one">ENJOY THEM</div>
-      <div class="title-full-two">SOME FUN STATS</div>
+      <div class="title-full-one hideme dontHide">ENJOY THEM</div>
+      <div class="title-full-two hideme dontHide">SOME FUN STATS</div>
       <div class="stat-container">
         <div class="stat-element hideme dontHide">
           <div class="stat-icon first-stat"></div>
@@ -246,16 +246,16 @@
   </article>
 
   <article class="parallax p-two">
-    <div class="p-title-one p-dark">ULTRA RESPONSIVE</div>
-    <div class="p-title-two">ON BOTH MOBILE & DESKTOP</div>
+    <div class="p-title-one p-dark hideme dontHide">ULTRA RESPONSIVE</div>
+    <div class="p-title-two hideme dontHide">ON BOTH MOBILE & DESKTOP</div>
     <div class="spacer horizontal-line"></div>
     <div class="mobile-parallax-image hideme-slide2 dontHide"><img src="img/parallax/mobile-parallax-image.png" alt="img"></div>
   </article>
 
   <article id="experience" class="content light">
-    <header class="title one">WORK EXPERIENCE</header>
+    <header class="title one hideme dontHide">WORK EXPERIENCE</header>
     <div class="spacer"></div>
-    <div class="title two">Check out where I've worked!</div>
+    <div class="title two hideme dontHide">Check out where I've worked!</div>
     <div id="work" class="work-container">
       <div class="work-exp-right-0 hideme">
         <div class="work-logo"><img src="img/work/optimizely.png" alt="img"></div>
@@ -270,7 +270,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-left-1 hideme">
+      <div class="work-exp-left-1 hideme dontHide">
         <div class="work-logo"><img src="img/work/tagged.png" alt="img"></div>
         <div class="work-company"><b>TAGGED INC.</b></div>
         <div class="work-position">Software Engineer</div>
@@ -285,7 +285,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-right-1 hideme">
+      <div class="work-exp-right-1 hideme dontHide">
         <div class="work-logo"><img src="img/work/ibm.png" alt="img"></div>
         <div class="work-company"><b>IBM INC.</b></div>
         <div class="work-position">Software Developer</div>
@@ -299,7 +299,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-left-2 hideme">
+      <div class="work-exp-left-2 hideme dontHide">
         <div class="work-logo"><img src="img/work/wire.png" alt="img"></div>
         <div class="work-company"><b>WIRE INC.</b></div>
         <div class="work-position">Researcher</div>
@@ -310,7 +310,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-right-2 hideme">
+      <div class="work-exp-right-2 hideme dontHide">
         <div class="work-logo"><img src="img/work/onprint.png" alt="img"></div>
         <div class="work-company"><b>ONPRINT INC.</b></div>
         <div class="work-position">Graphic Designer</div>
@@ -326,9 +326,9 @@
   </article>
 
   <article id="projects" class="content dark">
-    <header class="title one">MY PROJECTS</header>
+    <header class="title one hideme dontHide">MY PROJECTS</header>
     <div class="spacer"></div>
-    <div class="title two">Check out my following projects, I'm sure you'll love them!<br>Click on a project to find out more!</div>
+    <div class="title two hideme dontHide">Check out my following projects, I'm sure you'll love them!<br>Click on a project to find out more!</div>
     <div id="portfolio" class="container">
       <div class="section portfoliocontent">
         <section id="options" class="clear">
@@ -348,62 +348,61 @@
         </section>
         <section id="portfolio-grid" class="clear">
           <div class="portfolioBase"></div>
-          <div class="portfolio-element element tools backend" id="project-01.html">
+          <div class="portfolio-element element tools backend hideme dontHide" id="project-01.html">
             <img class="portfolio-image" src="img/portfolio/thumb-01.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Matrix Calculator<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element mobile" id="project-02.html">
+          <div class="portfolio-element element mobile hideme dontHide" id="project-02.html">
             <img class="portfolio-image" src="img/portfolio/thumb-02.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Android Game<span class="project-position">Mobile Game Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element backend hardware" id="project-03.html">
+          <div class="portfolio-element element backend hardware hideme dontHide" id="project-03.html">
             <img class="portfolio-image" src="img/portfolio/thumb-03.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Automated Teller Machine<span class="project-position">Embedded Software Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element web mobile" id="project-04.html">
+          <div class="portfolio-element element web mobile hideme dontHide" id="project-04.html">
             <img class="portfolio-image" src="img/portfolio/thumb-04.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Portfolio Website<span class="project-position">Full Stack Web Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element tools backend" id="project-05.html">
+          <div class="portfolio-element element tools backend hideme dontHide" id="project-05.html">
             <img class="portfolio-image" src="img/portfolio/thumb-05.png" alt="img">
             <div>
               <span><span class="project-title"></span>Balance Tracker<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element hardware backend" id="project-06.html">
+          <div class="portfolio-element element hardware backend hideme dontHide" id="project-06.html">
             <img class="portfolio-image" src="img/portfolio/thumb-06.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Fuel Cell Car<span class="project-position">Embedded Software Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element tools backend" id="project-07.html">
+          <div class="portfolio-element element tools backend hideme dontHide" id="project-07.html">
             <img class="portfolio-image" src="img/portfolio/thumb-07.png" alt="img">
             <div>
               <span><span class="project-title"></span>Python Auto Clicker<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element hardware" id="project-08.html">
+          <div class="portfolio-element element hardware hideme dontHide" id="project-08.html">
             <img class="portfolio-image" src="img/portfolio/thumb-08.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Electric Cars<span class="project-position">Hardware Design Engineer</span></span>
             </div>
           </div>
-
           <div class="final"></div>
         </section>
       </div>
@@ -416,26 +415,26 @@
 
   <footer class="footer light">
     <div class="footer-container">
-      <div id="contact" class="title one">CONTACT</div>
+      <div id="contact" class="title one hideme dontHide">CONTACT</div>
       <div class="spacer"></div>
-      <div class="title two">I like to create things with fun, like-minded people. Feel free to say hello!</div>
+      <div class="title two hideme dontHide">I like to create things with fun, like-minded people. Feel free to say hello!</div>
       <div class="hideme dontHide">
-        <div class="email">Contact me at: <a href="mailto:bhamodi@uwaterloo.ca" target="_blank">bhamodi@uwaterloo.ca</a></div>
+        <div class="email hideme dontHide">Contact me at: <a href="mailto:bhamodi@uwaterloo.ca" target="_blank">bhamodi@uwaterloo.ca</a></div>
       </div>
       <div class="contact">
-        <ul class="icons">
+        <ul class="icons hideme dontHide">
           <li><a class="github" href="https://github.com/bhamodi" target="_blank"></a></li>
           <li><a class="stackoverflow" href="http://stackoverflow.com/users/3474514/baraa" target="_blank"></a></li>
           <li><a class="hackerrank" href="https://www.hackerrank.com/bhamodi" target="_blank"></a></li>
           <li><a class="codecademy" href="http://www.codecademy.com/bhamodi" target="_blank"></a></li>
           <li><a class="linkedin" href="https://www.linkedin.com/in/baraahamodi" target="_blank"></a></li>
         </ul>
-        <div class="copy-right">2015 © Baraa Hamodi. All rights reserved.</div>
+        <div class="copy-right hideme dontHide">2015 © Baraa Hamodi. All rights reserved.</div>
       </div>
     </div>
   </footer>
 
-  <a href="#home" class="scrollup">^</a>
+  <a href="#home" class="scrollup hideme dontHide">^</a>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="js/dist/home.min.js"></script>
