Removed unused class.

--- a/home.html
+++ b/home.html
@@ -249,7 +249,7 @@
     <div class="p-title-one p-dark hideme dontHide">ULTRA RESPONSIVE</div>
     <div class="p-title-two hideme dontHide">ON BOTH MOBILE & DESKTOP</div>
     <div class="spacer horizontal-line"></div>
-    <div class="mobile-parallax-image hideme-slide2 dontHide"><img src="img/parallax/mobile-parallax-image.png" alt="img"></div>
+    <div class="mobile-parallax-image hideme-slide dontHide"><img src="img/parallax/mobile-parallax-image.png" alt="img"></div>
   </article>
 
   <article id="experience" class="content light">
