--- a/home.html
+++ b/home.html
@@ -434,7 +434,7 @@
     </div>
   </footer>
 
-  <a href="#home" class="scrollup hideme dontHide">^</a>
+  <a href="#home" class="scrollup">^</a>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="js/dist/home.min.js"></script>
