Updated to YTPlayer v2.9.4

--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
     <a href="#skills"><div class="bouncing-arrow"></div></a>
 
     <!-- Video Background -->
-    <a id="background-video" class="player" data-property="{videoURL:'kn-1D5z3-Cs',mute:true,showControls:false,showYTLogo:false,realfullscreen:false,gaTrack:false}"></a>
+    <a id="background-video" class="player" data-property="{videoURL:'kn-1D5z3-Cs',mute:true,vol:100,stopAt:219,showControls:false,showYTLogo:false,realfullscreen:false,gaTrack:false}"></a>
   </section>
   <section id="mobile-background" class="clear"></section>
   <div class="main-title">
