--- a/home.html
+++ b/home.html
@@ -93,12 +93,12 @@
     </nav>
   </header>
   <article id="skills" class="content dark">
-    <header class="title one hideme dontHide">MY SKILLS</header>
+    <header class="title one hideme fade">MY SKILLS</header>
     <div class="spacer"></div>
-    <div class="title two hideme dontHide">I take pride in my interdisciplinary approach to crafting beautiful, functional and engaging work that delights and delivers results.</div>
+    <div class="title two hideme fade">I take pride in my interdisciplinary approach to crafting beautiful, functional and engaging work that delights and delivers results.</div>
     <div class="s-container services-container">
       <section class="services">
-        <div class="skill-element hideme dontHide">
+        <div class="skill-element hideme fade">
           <div class="skill-icon"><div class="skill-title">C++</div></div>
           <div class="tooltip skill-hover">
             <div class="details">
@@ -111,7 +111,7 @@
           </div>
           <span class="tooltip-bottom-triangle skill-hover"></span>
         </div>
-        <div class="skill-element hideme dontHide">
+        <div class="skill-element hideme fade">
           <div class="skill-icon"><div class="skill-title">JAVA</div></div>
           <div class="tooltip skill-hover">
             <div class="details">
@@ -124,7 +124,7 @@
           </div>
           <span class="tooltip-bottom-triangle skill-hover"></span>
         </div>
-        <div class="skill-element hideme dontHide">
+        <div class="skill-element hideme fade">
           <div class="skill-icon"><div class="skill-title">PYTHON</div></div>
           <div class="tooltip skill-hover">
             <div class="details">
@@ -137,7 +137,7 @@
           </div>
           <span class="tooltip-bottom-triangle skill-hover"></span>
         </div>
-        <div class="skill-element hideme dontHide">
+        <div class="skill-element hideme fade">
           <div class="skill-icon"><div class="skill-title">JAVASCRIPT</div></div>
           <div class="tooltip skill-hover">
             <div class="details">
@@ -150,7 +150,7 @@
           </div>
           <span class="tooltip-bottom-triangle skill-hover"></span>
         </div>
-        <div class="skill-element hideme dontHide">
+        <div class="skill-element hideme fade">
           <div class="skill-icon"><div class="skill-title">HTML / CSS</div></div>
           <div class="tooltip skill-hover">
             <div class="details">
@@ -163,7 +163,7 @@
           </div>
           <span class="tooltip-bottom-triangle skill-hover"></span>
         </div>
-        <div class="skill-element hideme dontHide">
+        <div class="skill-element hideme fade">
           <div class="skill-icon"><div class="skill-title">PHP</div></div>
           <div class="tooltip skill-hover">
             <div class="details">
@@ -176,7 +176,7 @@
           </div>
           <span class="tooltip-bottom-triangle skill-hover"></span>
         </div>
-        <div class="skill-element hideme dontHide">
+        <div class="skill-element hideme fade">
           <div class="skill-icon"><div class="skill-title">BASH</div></div>
           <div class="tooltip skill-hover">
             <div class="details">
@@ -188,7 +188,7 @@
           </div>
           <span class="tooltip-bottom-triangle skill-hover"></span>
         </div>
-        <div class="skill-element hideme dontHide">
+        <div class="skill-element hideme fade">
           <div class="skill-icon"><div class="skill-title">SQL</div></div>
           <div class="tooltip skill-hover">
             <div class="details">
@@ -207,10 +207,10 @@
 
   <article id="stats" class="content light">
     <section class="full">
-      <div class="title-full-one hideme dontHide">ENJOY THEM</div>
-      <div class="title-full-two hideme dontHide">SOME FUN STATS</div>
+      <div class="title-full-one hideme fade">ENJOY THEM</div>
+      <div class="title-full-two hideme fade">SOME FUN STATS</div>
       <div class="stat-container">
-        <div class="stat-element hideme dontHide">
+        <div class="stat-element hideme fade">
           <div class="stat-icon first-stat"></div>
           <div class="stat-counter" data-perc="99999">
             <span class="stat-count highlight">0</span>
@@ -218,14 +218,14 @@
             <div class="stat-details">LINES OF CODE</div>
           </div>
         </div>
-        <div class="stat-element hideme dontHide">
+        <div class="stat-element hideme fade">
           <div class="stat-icon second-stat"></div>
           <div class="stat-counter" data-perc="697">
             <span class="stat-count highlight">0</span>
             <div class="stat-details">GITHUB CONTRIBUTIONS</div>
           </div>
         </div>
-        <div class="stat-element hideme dontHide">
+        <div class="stat-element hideme fade">
           <div class="stat-icon third-stat"></div>
           <div class="stat-counter" data-perc="15000">
             <span class="stat-count highlight">0</span>
@@ -233,7 +233,7 @@
             <div class="stat-details">ANDROID APP INSTALLS</div>
           </div>
         </div>
-        <div class="stat-element hideme dontHide">
+        <div class="stat-element hideme fade">
           <div class="stat-icon fourth-stat"></div>
           <div class="stat-counter dynamic">
             <span class="stat-count highlight">0</span>
@@ -246,16 +246,16 @@
   </article>
 
   <article class="parallax p-two">
-    <div class="p-title-one p-dark hideme dontHide">ULTRA RESPONSIVE</div>
-    <div class="p-title-two hideme dontHide">ON BOTH MOBILE & DESKTOP</div>
+    <div class="p-title-one p-dark hideme fade">ULTRA RESPONSIVE</div>
+    <div class="p-title-two hideme fade">ON BOTH MOBILE & DESKTOP</div>
     <div class="spacer horizontal-line"></div>
-    <div class="mobile-parallax-image hideme-slide dontHide"><img src="img/parallax/mobile-parallax-image.png" alt="img"></div>
+    <div class="mobile-parallax-image hideme-slide fade"><img src="img/parallax/mobile-parallax-image.png" alt="img"></div>
   </article>
 
   <article id="experience" class="content light">
-    <header class="title one hideme dontHide">WORK EXPERIENCE</header>
+    <header class="title one hideme fade">WORK EXPERIENCE</header>
     <div class="spacer"></div>
-    <div class="title two hideme dontHide">Check out where I've worked!</div>
+    <div class="title two hideme fade">Check out where I've worked!</div>
     <div id="work" class="work-container">
       <div class="work-exp-right-0 hideme">
         <div class="work-logo"><img src="img/work/optimizely.png" alt="img"></div>
@@ -270,7 +270,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-left-1 hideme dontHide">
+      <div class="work-exp-left-1 hideme fade">
         <div class="work-logo"><img src="img/work/tagged.png" alt="img"></div>
         <div class="work-company"><b>TAGGED INC.</b></div>
         <div class="work-position">Software Engineer</div>
@@ -285,7 +285,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-right-1 hideme dontHide">
+      <div class="work-exp-right-1 hideme fade">
         <div class="work-logo"><img src="img/work/ibm.png" alt="img"></div>
         <div class="work-company"><b>IBM INC.</b></div>
         <div class="work-position">Software Developer</div>
@@ -299,7 +299,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-left-2 hideme dontHide">
+      <div class="work-exp-left-2 hideme fade">
         <div class="work-logo"><img src="img/work/wire.png" alt="img"></div>
         <div class="work-company"><b>WIRE INC.</b></div>
         <div class="work-position">Researcher</div>
@@ -310,7 +310,7 @@
           </ul>
         </div>
       </div>
-      <div class="work-exp-right-2 hideme dontHide">
+      <div class="work-exp-right-2 hideme fade">
         <div class="work-logo"><img src="img/work/onprint.png" alt="img"></div>
         <div class="work-company"><b>ONPRINT INC.</b></div>
         <div class="work-position">Graphic Designer</div>
@@ -326,13 +326,13 @@
   </article>
 
   <article id="projects" class="content dark">
-    <header class="title one hideme dontHide">MY PROJECTS</header>
+    <header class="title one hideme fade">MY PROJECTS</header>
     <div class="spacer"></div>
-    <div class="title two hideme dontHide">Check out my following projects, I'm sure you'll love them!<br>Click on a project to find out more!</div>
+    <div class="title two hideme fade">Check out my following projects, I'm sure you'll love them!<br>Click on a project to find out more!</div>
     <div id="portfolio" class="container">
       <div class="section portfoliocontent">
         <section id="options" class="clear">
-          <div id="filters" class="option-set clearfix foliomenu hideme dontHide" data-option-key="filter">
+          <div id="filters" class="option-set clearfix foliomenu hideme fade" data-option-key="filter">
             <a href="#filter" data-option-value="*" class="folio-btn active"><div class="portfolio-btn">All</div></a>
             <a href="#filter" data-option-value=".web" class="folio-btn"><div class="portfolio-btn">Web</div></a>
             <a href="#filter" data-option-value=".mobile" class="folio-btn"><div class="portfolio-btn">Mobile</div></a>
@@ -348,56 +348,56 @@
         </section>
         <section id="portfolio-grid" class="clear">
           <div class="portfolioBase"></div>
-          <div class="portfolio-element element tools backend hideme dontHide" id="project-01.html">
+          <div class="portfolio-element element tools backend hideme fade" id="project-01.html">
             <img class="portfolio-image" src="img/portfolio/thumb-01.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Matrix Calculator<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element mobile hideme dontHide" id="project-02.html">
+          <div class="portfolio-element element mobile hideme fade" id="project-02.html">
             <img class="portfolio-image" src="img/portfolio/thumb-02.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Android Game<span class="project-position">Mobile Game Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element backend hardware hideme dontHide" id="project-03.html">
+          <div class="portfolio-element element backend hardware hideme fade" id="project-03.html">
             <img class="portfolio-image" src="img/portfolio/thumb-03.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Automated Teller Machine<span class="project-position">Embedded Software Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element web mobile hideme dontHide" id="project-04.html">
+          <div class="portfolio-element element web mobile hideme fade" id="project-04.html">
             <img class="portfolio-image" src="img/portfolio/thumb-04.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Portfolio Website<span class="project-position">Full Stack Web Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element tools backend hideme dontHide" id="project-05.html">
+          <div class="portfolio-element element tools backend hideme fade" id="project-05.html">
             <img class="portfolio-image" src="img/portfolio/thumb-05.png" alt="img">
             <div>
               <span><span class="project-title"></span>Balance Tracker<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element hardware backend hideme dontHide" id="project-06.html">
+          <div class="portfolio-element element hardware backend hideme fade" id="project-06.html">
             <img class="portfolio-image" src="img/portfolio/thumb-06.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Fuel Cell Car<span class="project-position">Embedded Software Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element tools backend hideme dontHide" id="project-07.html">
+          <div class="portfolio-element element tools backend hideme fade" id="project-07.html">
             <img class="portfolio-image" src="img/portfolio/thumb-07.png" alt="img">
             <div>
               <span><span class="project-title"></span>Python Auto Clicker<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
-          <div class="portfolio-element element hardware hideme dontHide" id="project-08.html">
+          <div class="portfolio-element element hardware hideme fade" id="project-08.html">
             <img class="portfolio-image" src="img/portfolio/thumb-08.jpg" alt="img">
             <div>
               <span><span class="project-title"></span>Electric Cars<span class="project-position">Hardware Design Engineer</span></span>
@@ -409,27 +409,27 @@
     </div>
     <div class="clear"></div>
     <section class="img-spacer">
-      <div class="img-item hideme dontHide"><img src="img/imac.png" alt="img"></div>
+      <div class="img-item hideme fade"><img src="img/imac.png" alt="img"></div>
     </section>
   </article>
 
   <footer class="footer light">
     <div class="footer-container">
-      <div id="contact" class="title one hideme dontHide">CONTACT</div>
+      <div id="contact" class="title one hideme fade">CONTACT</div>
       <div class="spacer"></div>
-      <div class="title two hideme dontHide">I like to create things with fun, like-minded people. Feel free to say hello!</div>
-      <div class="hideme dontHide">
-        <div class="email hideme dontHide">Contact me at: <a href="mailto:bhamodi@uwaterloo.ca" target="_blank">bhamodi@uwaterloo.ca</a></div>
+      <div class="title two hideme fade">I like to create things with fun, like-minded people. Feel free to say hello!</div>
+      <div class="hideme fade">
+        <div class="email hideme fade">Contact me at: <a href="mailto:bhamodi@uwaterloo.ca" target="_blank">bhamodi@uwaterloo.ca</a></div>
       </div>
       <div class="contact">
-        <ul class="icons hideme dontHide">
+        <ul class="icons hideme fade">
           <li><a class="github" href="https://github.com/bhamodi" target="_blank"></a></li>
           <li><a class="stackoverflow" href="http://stackoverflow.com/users/3474514/baraa" target="_blank"></a></li>
           <li><a class="hackerrank" href="https://www.hackerrank.com/bhamodi" target="_blank"></a></li>
           <li><a class="codecademy" href="http://www.codecademy.com/bhamodi" target="_blank"></a></li>
           <li><a class="linkedin" href="https://www.linkedin.com/in/baraahamodi" target="_blank"></a></li>
         </ul>
-        <div class="copy-right hideme dontHide">2015 © Baraa Hamodi. All rights reserved.</div>
+        <div class="copy-right hideme fade">2015 © Baraa Hamodi. All rights reserved.</div>
       </div>
     </div>
   </footer>
