No longer loads bg.jpg on desktop web.

--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
     <!-- Video Background -->
     <a id="background-video" class="player" data-property="{videoURL:'kn-1D5z3-Cs',mute:true,vol:100,stopAt:219,showControls:false,showYTLogo:false,realfullscreen:false,gaTrack:false}"></a>
   </section>
-  <section id="mobile-background" class="clear"></section>
+  <section id="mobile-background"></section>
   <div class="main-title">
     <div class="title-container">
       <div class="welcome text-outline">A young man with big dreams</div>
