--- a/home.html
+++ b/home.html
@@ -424,9 +424,9 @@
       <div class="contact">
         <ul class="icons hideme fade">
           <li><a class="github" href="https://github.com/bhamodi" target="_blank"></a></li>
-          <li><a class="stackoverflow" href="http://stackoverflow.com/users/3474514/baraa" target="_blank"></a></li>
+          <li><a class="stackoverflow" href="https://stackoverflow.com/users/3474514/baraa" target="_blank"></a></li>
           <li><a class="hackerrank" href="https://www.hackerrank.com/bhamodi" target="_blank"></a></li>
-          <li><a class="codecademy" href="http://www.codecademy.com/bhamodi" target="_blank"></a></li>
+          <li><a class="codecademy" href="https://www.codecademy.com/bhamodi" target="_blank"></a></li>
           <li><a class="linkedin" href="https://www.linkedin.com/in/baraahamodi" target="_blank"></a></li>
         </ul>
         <div class="copy-right hideme fade">2015 © Baraa Hamodi. All rights reserved.</div>
