Updated inview.js and sticky.js. Fixed navigation animations. Cleaned up code.

--- a/home.html
+++ b/home.html
@@ -333,12 +333,12 @@
       <div class="section portfoliocontent">
         <section id="options" class="clear">
           <div id="filters" class="option-set clearfix foliomenu hideme fade" data-option-key="filter">
-            <a href="#filter" data-option-value="*" class="folio-btn active"><div class="portfolio-btn">All</div></a>
-            <a href="#filter" data-option-value=".web" class="folio-btn"><div class="portfolio-btn">Web</div></a>
-            <a href="#filter" data-option-value=".mobile" class="folio-btn"><div class="portfolio-btn">Mobile</div></a>
-            <a href="#filter" data-option-value=".tools" class="folio-btn"><div class="portfolio-btn">Tools</div></a>
-            <a href="#filter" data-option-value=".backend" class="folio-btn"><div class="portfolio-btn">Backend</div></a>
-            <a href="#filter" data-option-value=".hardware" class="folio-btn"><div class="portfolio-btn">Hardware</div></a>
+            <a data-option-value="*" class="folio-btn active"><div class="portfolio-btn">All</div></a>
+            <a data-option-value=".web" class="folio-btn"><div class="portfolio-btn">Web</div></a>
+            <a data-option-value=".mobile" class="folio-btn"><div class="portfolio-btn">Mobile</div></a>
+            <a data-option-value=".tools" class="folio-btn"><div class="portfolio-btn">Tools</div></a>
+            <a data-option-value=".backend" class="folio-btn"><div class="portfolio-btn">Backend</div></a>
+            <a data-option-value=".hardware" class="folio-btn"><div class="portfolio-btn">Hardware</div></a>
           </div>
         </section>
         <div class="clear"></div>
