Updated alternate text for images.

--- a/index.html
+++ b/index.html
@@ -66,23 +66,23 @@
 
       <!-- Flakes -->
       <li class="layer" data-depth="0.40">
-        <div class="depth-1 flake1"><img src="img/flake-depth1/flakes1.png" alt="flake"></div>
-        <div class="depth-1 flake2"><img src="img/flake-depth1/flakes2.png" alt="flake"></div>
-        <div class="depth-1 flake3"><img src="img/flake-depth1/flakes3.png" alt="flake"></div>
-        <div class="depth-1 flake4"><img src="img/flake-depth1/flakes4.png" alt="flake"></div>
+        <div class="depth-1 flake1"><img src="img/flake-depth1/flakes1.png" alt=""></div>
+        <div class="depth-1 flake2"><img src="img/flake-depth1/flakes2.png" alt=""></div>
+        <div class="depth-1 flake3"><img src="img/flake-depth1/flakes3.png" alt=""></div>
+        <div class="depth-1 flake4"><img src="img/flake-depth1/flakes4.png" alt=""></div>
       </li>
       <li class="layer" data-depth="0.50">
-        <div class="depth-2 flake1"><img src="img/flake-depth2/flakes1.png" alt="flake"></div>
-        <div class="depth-2 flake2"><img src="img/flake-depth2/flakes2.png" alt="flake"></div>
+        <div class="depth-2 flake1"><img src="img/flake-depth2/flakes1.png" alt=""></div>
+        <div class="depth-2 flake2"><img src="img/flake-depth2/flakes2.png" alt=""></div>
       </li>
       <li class="layer" data-depth="0.60">
-        <div class="depth-3 flake1"><img src="img/flake-depth3/flakes1.png" alt="flake"></div>
-        <div class="depth-3 flake2"><img src="img/flake-depth3/flakes2.png" alt="flake"></div>
-        <div class="depth-3 flake3"><img src="img/flake-depth3/flakes3.png" alt="flake"></div>
-        <div class="depth-3 flake4"><img src="img/flake-depth3/flakes4.png" alt="flake"></div>
+        <div class="depth-3 flake1"><img src="img/flake-depth3/flakes1.png" alt=""></div>
+        <div class="depth-3 flake2"><img src="img/flake-depth3/flakes2.png" alt=""></div>
+        <div class="depth-3 flake3"><img src="img/flake-depth3/flakes3.png" alt=""></div>
+        <div class="depth-3 flake4"><img src="img/flake-depth3/flakes4.png" alt=""></div>
       </li>
-      <li class="layer" data-depth="0.80"><div class="depth-4"><img src="img/flake-depth4/flakes.png" alt="flake"></div></li>
-      <li class="layer" data-depth="1.00"><div class="depth-5"><img src="img/flake-depth5/flakes.png" alt="flake"></div></li>
+      <li class="layer" data-depth="0.80"><div class="depth-4"><img src="img/flake-depth4/flakes.png" alt=""></div></li>
+      <li class="layer" data-depth="1.00"><div class="depth-5"><img src="img/flake-depth5/flakes.png" alt=""></div></li>
 
       <!-- Contact -->
       <li class="layer" data-depth="0.20">
