--- a/home.html
+++ b/home.html
@@ -249,7 +249,7 @@
     <div class="p-title-one p-dark hideme fade">ULTRA RESPONSIVE</div>
     <div class="p-title-two hideme fade">ON BOTH MOBILE & DESKTOP</div>
     <div class="spacer horizontal-line"></div>
-    <div class="mobile-parallax-image hideme-slide fade"><img src="img/parallax/mobile-parallax-image.png" alt="img"></div>
+    <div class="mobile-parallax-image hideme-slide fade"><img src="img/parallax/mobile-parallax-image.png" alt="Image not found. Please try reloading."></div>
   </article>
 
   <article id="experience" class="content light">
@@ -258,7 +258,7 @@
     <div class="title two hideme fade">Check out where I've worked!</div>
     <div id="work" class="work-container">
       <div class="work-exp-right-0 hideme">
-        <div class="work-logo"><img src="img/work/optimizely.png" alt="img"></div>
+        <div class="work-logo"><img src="img/work/optimizely.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>OPTIMIZELY INC.</b></div>
         <div class="work-position">Software Engineer</div>
         <div class="work-location">San Francisco, California</div>
@@ -271,7 +271,7 @@
         </div>
       </div>
       <div class="work-exp-left-1 hideme fade">
-        <div class="work-logo"><img src="img/work/tagged.png" alt="img"></div>
+        <div class="work-logo"><img src="img/work/tagged.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>TAGGED INC.</b></div>
         <div class="work-position">Software Engineer</div>
         <div class="work-location">San Francisco, California</div>
@@ -286,7 +286,7 @@
         </div>
       </div>
       <div class="work-exp-right-1 hideme fade">
-        <div class="work-logo"><img src="img/work/ibm.png" alt="img"></div>
+        <div class="work-logo"><img src="img/work/ibm.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>IBM INC.</b></div>
         <div class="work-position">Software Developer</div>
         <div class="work-location">Ottawa, Ontario</div>
@@ -300,7 +300,7 @@
         </div>
       </div>
       <div class="work-exp-left-2 hideme fade">
-        <div class="work-logo"><img src="img/work/wire.png" alt="img"></div>
+        <div class="work-logo"><img src="img/work/wire.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>WIRE INC.</b></div>
         <div class="work-position">Researcher</div>
         <div class="work-location">Waterloo, Ontario</div>
@@ -311,7 +311,7 @@
         </div>
       </div>
       <div class="work-exp-right-2 hideme fade">
-        <div class="work-logo"><img src="img/work/onprint.png" alt="img"></div>
+        <div class="work-logo"><img src="img/work/onprint.png" alt="Image not found. Please try reloading."></div>
         <div class="work-company"><b>ONPRINT INC.</b></div>
         <div class="work-position">Graphic Designer</div>
         <div class="work-location">Waterloo, Ontario</div>
@@ -349,56 +349,56 @@
         <section id="portfolio-grid" class="clear">
           <div class="portfolioBase"></div>
           <div class="portfolio-element element tools backend hideme fade" id="project-01.html">
-            <img class="portfolio-image" src="img/portfolio/thumb-01.jpg" alt="img">
+            <img class="portfolio-image" src="img/portfolio/thumb-01.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Matrix Calculator<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
           <div class="portfolio-element element mobile hideme fade" id="project-02.html">
-            <img class="portfolio-image" src="img/portfolio/thumb-02.jpg" alt="img">
+            <img class="portfolio-image" src="img/portfolio/thumb-02.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Android Game<span class="project-position">Mobile Game Developer</span></span>
             </div>
           </div>
 
           <div class="portfolio-element element backend hardware hideme fade" id="project-03.html">
-            <img class="portfolio-image" src="img/portfolio/thumb-03.jpg" alt="img">
+            <img class="portfolio-image" src="img/portfolio/thumb-03.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Automated Teller Machine<span class="project-position">Embedded Software Developer</span></span>
             </div>
           </div>
 
           <div class="portfolio-element element web mobile hideme fade" id="project-04.html">
-            <img class="portfolio-image" src="img/portfolio/thumb-04.jpg" alt="img">
+            <img class="portfolio-image" src="img/portfolio/thumb-04.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Portfolio Website<span class="project-position">Full Stack Web Developer</span></span>
             </div>
           </div>
 
           <div class="portfolio-element element tools backend hideme fade" id="project-05.html">
-            <img class="portfolio-image" src="img/portfolio/thumb-05.png" alt="img">
+            <img class="portfolio-image" src="img/portfolio/thumb-05.png" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Balance Tracker<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
           <div class="portfolio-element element hardware backend hideme fade" id="project-06.html">
-            <img class="portfolio-image" src="img/portfolio/thumb-06.jpg" alt="img">
+            <img class="portfolio-image" src="img/portfolio/thumb-06.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Fuel Cell Car<span class="project-position">Embedded Software Developer</span></span>
             </div>
           </div>
 
           <div class="portfolio-element element tools backend hideme fade" id="project-07.html">
-            <img class="portfolio-image" src="img/portfolio/thumb-07.png" alt="img">
+            <img class="portfolio-image" src="img/portfolio/thumb-07.png" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Python Auto Clicker<span class="project-position">Tool Developer</span></span>
             </div>
           </div>
 
           <div class="portfolio-element element hardware hideme fade" id="project-08.html">
-            <img class="portfolio-image" src="img/portfolio/thumb-08.jpg" alt="img">
+            <img class="portfolio-image" src="img/portfolio/thumb-08.jpg" alt="Image not found. Please try reloading.">
             <div>
               <span><span class="project-title"></span>Electric Cars<span class="project-position">Hardware Design Engineer</span></span>
             </div>
@@ -409,7 +409,7 @@
     </div>
     <div class="clear"></div>
     <section class="img-spacer">
-      <div class="img-item hideme fade"><img src="img/imac.png" alt="img"></div>
+      <div class="img-item hideme fade"><img src="img/imac.png" alt="Image not found. Please try reloading."></div>
     </section>
   </article>
 
