Deprecated IE8 and below support.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--[if IE 8 ]><html class="ie" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"><!--<![endif]-->
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Baraa Hamodi - Mechatronics Engineer</title>
@@ -35,11 +34,6 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/dist/index.min.css"/>
-
-  <!--[if lt IE 9]>
-    <link rel="stylesheet" href="css/ie.css" />
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
 </head>
 
 <body>
