--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta property="og:description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences and projects here!">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="icon.png">
+  <link rel="shortcut icon" href="img/icons/icon.png">
 
   <!-- Apple Touch Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/icons/apple-touch-icon-144x144-precomposed.png">
