Made js file async.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <!-- Javascript -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="js/dist/main.min.js"></script>
+  <script src="js/dist/main.min.js" async></script>
 
   <!-- Google Analytics -->
   <script>
