Added facebook online friend tracker project and personal assistant project.

--- a/home.html
+++ b/home.html
@@ -405,6 +405,20 @@
               <span><span class="project-title"></span>Electric Cars<span class="project-position">Hardware Design Engineer</span></span>
             </div>
           </div>
+
+          <div class="portfolio-element element tools web hideme fade" id="project-09.html">
+            <img class="portfolio-image" src="img/portfolio/thumb-09.png" alt="Image not found. Please try reloading.">
+            <div>
+              <span><span class="project-title"></span>Facebook Online Friend Tracker<span class="project-position">Data Scientist</span></span>
+            </div>
+          </div>
+
+          <div class="portfolio-element element tools mobile web hardware backend hideme fade" id="project-10.html">
+            <img class="portfolio-image" src="img/portfolio/thumb-10.png" alt="Image not found. Please try reloading.">
+            <div>
+              <span><span class="project-title"></span>Personal Assistant Android App<span class="project-position">Mobile App Developer</span></span>
+            </div>
+          </div>
           <div class="final"></div>
         </section>
       </div>
